force-app/main/default/objects/GLBP1_Bien_declarado__c/GLBP1_Bien_declarado__c.object-meta.xml
<CustomObject>
    <label>Bien declarado</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bienes declarados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>