force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_CodigoPaquete__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_CodigoPaquete__c</fullName>
    <label>Código paquete</label>
    <length>50</length>
    <type>Text</type>
</CustomField>