force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_Color__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Color__c</fullName>
    <label>Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>