force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_ComisionUsoCanal__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_ComisionUsoCanal__c</fullName>
    <label>Comisión uso de canal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>