force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_Factura__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Factura__c</fullName>
    <label>Factura</label>
    <length>10</length>
    <type>Text</type>
</CustomField>