force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_FechaFactura__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_FechaFactura__c</fullName>
    <label>Fecha factura</label>
    <type>Date</type>
</CustomField>