force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_Marca__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Marca__c</fullName>
    <label>Marca</label>
    <length>50</length>
    <type>Text</type>
</CustomField>