force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_MontoAseguradoEdificio__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_MontoAseguradoEdificio__c</fullName>
    <label>Monto asegurado edificio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>