force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_Patente__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Patente__c</fullName>
    <label>Patente</label>
    <length>8</length>
    <type>Text</type>
</CustomField>