force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_Pisos__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Pisos__c</fullName>
    <label>Pisos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>