force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_PoseeAccesoriosExtra__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_PoseeAccesoriosExtra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Posee accesorios extra?</label>
    <type>Checkbox</type>
</CustomField>