force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_Producto__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Producto__c</fullName>
    <label>Producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>