force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_TipoConstruccion__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_TipoConstruccion__c</fullName>
    <label>Tipo de construcción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>