force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLB_P1_Uso__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Uso__c</fullName>
    <label>Uso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>