force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_Ano__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Ano__c</fullName>
    <label>Año</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>