force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_Codigo_de_marca__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Codigo_de_marca__c</fullName>
    <label>Código de marca</label>
    <length>100</length>
    <type>Text</type>
</CustomField>