force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_Es_auto_nuevo__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Es_auto_nuevo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Es auto nuevo?</label>
    <type>Checkbox</type>
</CustomField>