force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_ID_Bien_declarado__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_ID_Bien_declarado__c</fullName>
    <displayFormat>BD-{000000}</displayFormat>
    <label>ID Bien declarado</label>
    <type>AutoNumber</type>
</CustomField>