force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_Material_de_construccion__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Material_de_construccion__c</fullName>
    <label>Material de construcción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>