force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_N_Chasis__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_N_Chasis__c</fullName>
    <label>N°Chasis</label>
    <length>50</length>
    <type>Text</type>
</CustomField>