force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_N_Motor__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_N_Motor__c</fullName>
    <label>N°Motor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>