force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_N_Ofi_Casa_Depto__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_N_Ofi_Casa_Depto__c</fullName>
    <label>N°Ofi/Casa/Depto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>