force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_Ofi_Casa_Depto__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Ofi_Casa_Depto__c</fullName>
    <label>Ofi/Casa/Depto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Departamento</fullName>
            </value>
            <value>
                <fullName>Oficina</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>