force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_PropietarioBien__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_PropietarioBien__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario del Bien</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bien declarado (Propietario del Bien)</relationshipLabel>
    <relationshipName>GLBP1_Bien_declarado</relationshipName>
    <type>Lookup</type>
</CustomField>