force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_Tipo__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inmueble</fullName>
            </value>
            <value>
                <fullName>Mueble</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>