force-app/main/default/objects/GLBP1_Bien_declarado__c/fields/GLBP1_Uso_de_vivienda__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Uso_de_vivienda__c</fullName>
    <label>Uso de vivienda</label>
    <length>50</length>
    <type>Text</type>
</CustomField>